--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<head>
 		<title>VIDEO PLAYER</title>
 		<style>
-		body { background-color : gray}
+		body { background-color : black}
 		</style>
 	</head>
 
 <body>
-<div style="position:relative;padding-bottom:56.25%;height:0px"><iframe type="text/html" allowtransparency="true" frameborder="0" width="100%" height="100%" src="http://www.youtube.com/embed/trW1eUgLePY?autoplay=1&amp;iv_load_policy=3&amp;controls=0&amp;rel=0&amp;disablekb=1&amp;modestbranding=1&amp;fs=0&amp;showinfo=0" style="position: absolute; top: 0px; left: 0px;"></iframe></div></body>
+	<iframe width="1920" height="1080" src="http://www.youtube.com/embed/trW1eUgLePY?&autoplay=1&showinfo=0&fs=0&disablekb=1&vq=auto&controls=0&rel=0" frameborder="0" allowfullscreen></iframe></body>
 </html>
