--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	</head>
 
 <body>
-	<div style="position:relative;padding-bottom:56.25%;height:0px"><iframe type="text/html" allowtransparency="true" frameborder="0" width="100%" height="100%" src="http://www.youtube.com/embed/trW1eUgLePY?autoplay=1&amp;mute=0&amp;iv_load_policy=3&amp;controls=0&amp;rel=0&amp;disablekb=1&amp;modestbranding=1&amp;fs=0&amp;showinfo=0" style="position: absolute; top: 0px; left: 0px;"></iframe></div>
+	<video 
+		src="videos/마인숲.mp4" 
+		autoplay="autoplay"
+		muted="muted"
+	></video>
 </body>
 </html>
