--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>VIDEO PLAYER</title>
-		<style>
-		body { background-color : black}
-		</style>
-	</head>
-
+<head>
+</head>
 <body>
-	<video 
-		src="videos/마인숲.mp4" 
-		autoplay="autoplay"
-		muted="muted"
-	></video>
+<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/hp8zrc?autoplay=1&loop=0" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
 </body>
 </html>
