--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }  
     }  
     var request = new Request();
-	document.write('<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/' + request.getParameter('id') + '?loop=0" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>');
+	document.write('<iframe src="https://streamable.com/e/' + request.getParameter('id') + '?loop=0" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe>');
 </script>
 </body>
 </html>
