--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }  
     }  
     var request = new Request();
-	document.write('<iframe src="https://streamable.com/e/' + request.getParameter('id') + '?loop=0" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe>');
+	document.write('<video width="300" height="200" autoplay="autoplay"><source src="video/Minecraft Dungeons Official Launch Trailer.mp4" type="video/mp4" /></video>');
 </script>
 </body>
 </html>
