--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }  
     }  
     var request = new Request();
-	document.write('<video width="300" height="200" autoplay="autoplay"><source src="video/Minecraft Dungeons Official Launch Trailer.mp4" type="video/mp4" /></video>');
+	document.write('<video width="98%" height="98%" autoplay="autoplay"><source src="video/Minecraft Dungeons Official Launch Trailer.mp4" type="video/mp4" /></video>');
 </script>
 </body>
 </html>
